fix(936): C1-14 checkpoint parser confinement and failed-child routing (WIP)
Remove implicit in-process fallback when a process-routed parser child cannot
start. Preserve explicit in-process configuration and the single routing authority;
report SANDBOX_FAILED with the original child-start cause. Pin parser dependencies
and the narrow PDF-render/build-time reflective exceptions.

The same extraction owners borrow C1-7 registered timebox/reader instances, so
constructor changes stay with the boundary fix instead of adding temporary APIs.
Worker run11 passed 120 focused tests, including real child-reaping assertions;
confinement and telemetry-boundary mutations previously failed as intended and
were restored. Exact checkpoint integrated/logic-seam/full proof remains required.

User-authorized item WIP checkpoint; push immediately and continue the lane.